--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -1263,6 +1263,7 @@ paths:
                       example: 1 City Point
                     street_line_2:
                       type: string
+                      minLength: 1
                       nullable: true
                       description: The second line of the street address.
                     city:
@@ -1505,6 +1506,7 @@ paths:
                       example: 1 City Point
                     street_line_2:
                       type: string
+                      minLength: 1
                       nullable: true
                       description: The second line of the street address.
                     city:
@@ -1594,6 +1596,7 @@ paths:
                       example: 1 City Point
                     street_line_2:
                       type: string
+                      minLength: 1
                       nullable: true
                       description: The second line of the street address.
                     city:
