Pushing v52 from API 081f9adab1c57d317ae6e6004f1e64ba9667cf1c

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -3043,7 +3043,7 @@ paths:
               properties:
                 url:
                   type: string
-                  pattern: (https?:\/\/)?([\w-])+\.{1}([a-zA-Z]{2,63})([/\w-]*)*\/?\??([^#\n\r]*)?#?([^\n\r]*)
+                  pattern: (https:\/\/)?([\w-])+\.{1}([a-zA-Z]{2,63})([/\w-]*)*\/?\??([^#\n\r]*)?#?([^\n\r]*)
                   description: URL to which matching events will be delivered
                   example: https://example.com/catalyst-webhook
                 events:
@@ -3189,7 +3189,7 @@ paths:
               properties:
                 url:
                   type: string
-                  pattern: (https?:\/\/)?([\w-])+\.{1}([a-zA-Z]{2,63})([/\w-]*)*\/?\??([^#\n\r]*)?#?([^\n\r]*)
+                  pattern: (https:\/\/)?([\w-])+\.{1}([a-zA-Z]{2,63})([/\w-]*)*\/?\??([^#\n\r]*)?#?([^\n\r]*)
                   description: URL to which matching events will be delivered
                   example: https://example.com/catalyst-webhook
                 events:
@@ -4864,7 +4864,7 @@ components:
           example: wbhk_xeechie3uqu5QuueSihi
         url:
           type: string
-          pattern: (https?:\/\/)?([\w-])+\.{1}([a-zA-Z]{2,63})([/\w-]*)*\/?\??([^#\n\r]*)?#?([^\n\r]*)
+          pattern: (https:\/\/)?([\w-])+\.{1}([a-zA-Z]{2,63})([/\w-]*)*\/?\??([^#\n\r]*)?#?([^\n\r]*)
           description: URL to which matching events will be delivered
           example: https://example.com/catalyst-webhook
         events:
