Pushing v54 from API 49dab5bd0ee258778bfe3b0725d35c016a32fef6

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -4887,6 +4887,15 @@ components:
             to a member's care team.
           example: ctr_iNGhmxf28QqEstlwzxWK
           nullable: true
+        status:
+          type: string
+          enum:
+            - active
+            - deactivated
+            - invited
+          description: Current status of the user. Possible status values are `active`,
+            `invited`, and `deactivated`.
+          example: active
         created_at:
           type: string
           format: date-time
@@ -4913,6 +4922,7 @@ components:
         - role
         - live_care_team_role
         - test_care_team_role
+        - status
         - created_at
         - updated_at
         - deactivated_at
