Pushing v56 from API 70986ed1be693dcf6d3a870cffb506b204538506

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -3427,7 +3427,8 @@ components:
                   - $ref: "#/components/schemas/user"
                 x-expandable:
                   $ref: "#/components/schemas/user"
-                description: The user who is on the care team.
+                description: The user on the care team. Only users with care team roles will be
+                  eligible for automatic routing of tasks.
                 example: usr_NC6MQ3FyxddKoJJpfSVL
             required:
               - user
