Pushing v57 from API d4ddb01b471653be9a732f61b9077d8573caf9fb

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -5063,6 +5063,10 @@ components:
         - task_definition.updated
         - thread.created
         - thread.updated
+        - user.created
+        - user.updated
+        - user.deactivated
+        - user.reactivated
         - webhook.created
         - webhook.updated
         - webhook.deleted
