Pushing v59 from API dfed9ab81be5a409d0ebfd2f6c1f91197fe0e8db

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -2901,6 +2901,17 @@ paths:
                   type: string
                   description: Last name of the user.
                   example: Adame
+                display_title:
+                  type: string
+                  minLength: 1
+                  maxLength: 50
+                  nullable: true
+                  description: Display text that describes the user's title. The display title
+                    will appear in the Source application  and the member-facing
+                    Elements SDK but will not affect any Source configuration.
+                    For example, a physician  user's title may be set to
+                    'Physician.'
+                  example: Physician
                 email:
                   type: string
                   description: Email address for the user. Only admins and owners may update
@@ -3157,6 +3168,17 @@ paths:
                   type: string
                   description: Last name of the user.
                   example: Adame
+                display_title:
+                  type: string
+                  minLength: 1
+                  maxLength: 50
+                  nullable: true
+                  description: Display text that describes the user's title. The display title
+                    will appear in the Source application  and the member-facing
+                    Elements SDK but will not affect any Source configuration.
+                    For example, a physician  user's title may be set to
+                    'Physician.'
+                  example: Physician
                 email:
                   type: string
                   description: Email address for the user. Only admins and owners may update
@@ -4985,6 +5007,15 @@ components:
           nullable: true
           description: Last name of the user.
           example: mem_06Z9ZCYZu9HF0IGgGdZ4
+        display_title:
+          type: string
+          maxLength: 50
+          nullable: true
+          description: Display text that describes the user's title. The display title
+            will appear in the Source application  and the member-facing
+            Elements SDK but will not affect any Source configuration. For
+            example, a physician  user's title may be set to 'Physician.'
+          example: Physician
         email:
           type: string
           description: Email address for the user.
@@ -5061,6 +5092,7 @@ components:
         - id
         - first_name
         - last_name
+        - display_title
         - email
         - role
         - live_care_team_role
