Pushing v60 from API f26eba94538524ec960d6faca2d21f9797277ba8

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -1845,7 +1845,9 @@ paths:
                   example: mem_JAfPRRc59eh2YQ1aeL3D
                 assignee:
                   type: string
-                  description: The user to which this task is assigned.
+                  nullable: true
+                  description: The user to which this task is assigned. If set to null, the task
+                    will be unassigned.
                   example: usr_NC6MQ3FyxddKoJJpfSVL
                 summary:
                   type: string
@@ -2013,9 +2015,11 @@ paths:
               type: string
             description: Filter results by assignees. If multiple assignee ids are provided,
               tasks matching any of the provided assignees will be returned.
+              Providing `unassigned` will return any tasks that are unassigned.
           required: false
           description: Filter results by assignees. If multiple assignee ids are provided,
             tasks matching any of the provided assignees will be returned.
+            Providing `unassigned` will return any tasks that are unassigned.
         - in: query
           style: form
           explode: true
@@ -2158,7 +2162,9 @@ paths:
               properties:
                 assignee:
                   type: string
-                  description: The user to which this task is assigned.
+                  nullable: true
+                  description: The user to which this task is assigned. If set to null, the task
+                    will be unassigned.
                   example: usr_NC6MQ3FyxddKoJJpfSVL
                 summary:
                   type: string
@@ -4637,7 +4643,8 @@ components:
             - $ref: "#/components/schemas/user"
           x-expandable:
             $ref: "#/components/schemas/user"
-          description: User on the care team to which this task is assigned.
+          description: The user to which this task is assigned. If set to null, the task
+            is unassigned.
           example: usr_NC6MQ3FyxddKoJJpfSVL
           nullable: true
         summary:
