Pushing v62 from API 2938daacd65865e0f96ee0c6c03eaff73b71f038

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -1020,6 +1020,7 @@ paths:
               properties:
                 thread:
                   type: string
+                  example: thrd_7BqeKrhbVU7c4Cigqs60
                   description: Unique ID of the thread to which the message belongs.
                 text:
                   type: string
@@ -1063,9 +1064,9 @@ paths:
                       - resource
                 sender:
                   type: string
-                  description: The ID of the user this message is being sent by. Required for
-                    sending messages with an API key.
                   example: usr_NC6MQ3FyxddKoJJpfSVL
+                  description: When calling this endpoint with an API key, you must use this field
+                    to specify the user on whose behalf the message is sent.
               required:
                 - thread
                 - text
@@ -1081,10 +1082,10 @@ paths:
     get:
       summary: List all Messages
       description: >-
-        Returns a list of threads within the current account.
+        Returns a list of messages within a thread.
 
 
-        The threads returned are sorted with the most recently updated appearing first.
+        The messages returned are sorted with the most recently sent appearing first.
       tags:
         - Message
       parameters:
@@ -1141,6 +1142,7 @@ paths:
           name: thread
           schema:
             type: string
+            example: thrd_7BqeKrhbVU7c4Cigqs60
             description: Unique ID of the thread whose messages should be shown.
           required: true
           description: Unique ID of the thread whose messages should be shown.
@@ -2558,9 +2560,11 @@ paths:
               properties:
                 member:
                   type: string
+                  example: mem_JAfPRRc59eh2YQ1aeL3D
                   description: The ID of the member to which this thread belongs
                 assignee:
                   type: string
+                  example: usr_NC6MQ3FyxddKoJJpfSVL
                   description: The ID of the care team user to which this thread is currently
                     assigned, if any.
                 subject:
@@ -2611,9 +2615,9 @@ paths:
                           - resource
                     sender:
                       type: string
-                      description: The ID of the user this message is being sent by. Required for
-                        sending messages with an API key.
                       example: usr_NC6MQ3FyxddKoJJpfSVL
+                      description: When calling this endpoint with an API key, you must use this field
+                        to specify the user on whose behalf the message is sent.
                   required:
                     - text
                   description: The initial message to send when creating this thread.
@@ -2692,6 +2696,7 @@ paths:
           name: member
           schema:
             type: string
+            example: mem_JAfPRRc59eh2YQ1aeL3D
             description: Filter threads to only those belonging to the given member.
           required: false
           description: Filter threads to only those belonging to the given member.
@@ -2701,6 +2706,7 @@ paths:
           name: assignee
           schema:
             type: string
+            example: usr_NC6MQ3FyxddKoJJpfSVL
             description: Filter threads to only those assigned to the given user. The value
               `current` may be used to indicate the currently authenticated
               user.
@@ -2797,10 +2803,10 @@ paths:
               properties:
                 assignee:
                   type: string
+                  example: usr_NC6MQ3FyxddKoJJpfSVL
                   nullable: true
                   description: ID of a user on the member's Care Team - assigns the thread to the
                     new user.
-                  example: usr_NC6MQ3FyxddKoJJpfSVL
                 status:
                   type: string
                   enum:
@@ -2857,9 +2863,9 @@ paths:
                   type: string
                   format: date-time
                   nullable: true
-                  description: Timestamp indicating the point through which the member has
-                    read.  All messages with a `sent_at` after this point are
-                    considered unread.  If null, the member has not seen any
+                  description: Timestamp indicating the point through which the member has read.
+                    All messages with a `sent_at` after this point are
+                    considered unread. If null, the member has not seen any
                     messages on this thread.
                   example: 2021-05-13T16:33:00.000Z
               required:
@@ -4336,8 +4342,8 @@ components:
         impersonated_by:
           type: string
           nullable: true
-          description: The person or API key who sent the message on behalf of `sender`.
-            If null, the message sender was not impersonated.
+          description: The API key who sent the message on behalf of `sender`. If null,
+            the message sender was not impersonated.
       required:
         - object
         - id
